GG-5: Fix for responsive on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -129,6 +129,33 @@
   opacity: 0.7;
 }
 
+.footer-button {
+  background-color: transparent;
+  border-width: 0;
+  box-sizing: border-box;
+  color: white;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Clarkson,Helvetica,sans-serif;
+  font-size: 14.4px;
+  font-weight: 500;
+  letter-spacing: 0;
+  line-height: 1em;
+  padding: 22px 32px;
+  position: relative;
+  border-radius: 45px;
+  text-decoration: none;
+}
+
+.footer-button:hover {
+  box-shadow: rgba(255, 255, 255, 0.56) 0px 0px 10px;
+}
+
+.footer-button span {
+  z-index: 1;
+  position: relative;
+}
+
 @media (max-width: 480px) {
   .footer-div{
     padding: 20px;
@@ -160,6 +187,10 @@
   #refresh_button i {
     font-size: 5px;
     margin: 1px;
+  }
+  .footer-button {
+    font-size: 8px;
+    padding: 10px 15px;
   }
 }
 @media (min-width: 481px) and (max-width: 768px) {
@@ -194,6 +225,10 @@
     font-size: 8px;
     margin: 2px;
   }
+  .footer-button {
+    font-size: 8px;
+    padding: 8px 10px;
+  }
 }
 @media (min-width: 769px) and (max-width: 990px) {
   .footer-div{
@@ -227,31 +262,8 @@
     font-size: 10px;
     margin: 3px;
   }
-}
-
-.button {
-  background-color: transparent;
-  border-width: 0;
-  box-sizing: border-box;
-  color: white;
-  cursor: pointer;
-  display: inline-block;
-  font-family: Clarkson,Helvetica,sans-serif;
-  font-size: 1vw;
-  font-weight: 500;
-  letter-spacing: 0;
-  line-height: 1em;
-  padding: 1.5em 2.2em;
-  position: relative;
-  border-radius: 45px;
-  text-decoration: none;
-}
-
-.button:hover {
-  box-shadow: rgba(255, 255, 255, 0.56) 0px 0px 10px;
-}
-
-.button span {
-  z-index: 1;
-  position: relative;
+  .footer-button {
+    font-size: 10px;
+    padding: 15px 16.5px;
+  }
 }
