--- a/src/components/DashboardSingleStateWidget.css
+++ b/src/components/DashboardSingleStateWidget.css
@@ -46,7 +46,7 @@
         font-size: 10px;
     }
     .superscript {
-        font-size: 6px;
+        font-size: 10px;
     }
 }
 @media (min-width: 481px) and (max-width: 768px) {
